<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PullUp</string>
    <string name="menu_settings">Settings</string>
    <string name="button1name">ABOUT</string>
    <string name="button3name">EXIT</string>
    <string name="button4name">TRAINING</string>
    <string name="button5name">START</string>
    <string name="button6name">SKIP</string>
    <string name="button7name">NEXT</string>
    <string name="button8name">FINISH</string>
    <string name="image">xvxcv</string>
    <string name="text">qwe</string>
    <string name="text1">qwe</string>
    <string name="Anim">PullUp</string>
    <string name="start">START TIMER</string>
	<string name="_00_40">00:40</string>
	 <string name="button9name">MEMO</string>
    
    
   
  

</resources>