<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/timer1"
    android:orientation="vertical" >

   
     <TextView 
          android:id="@+id/time_display_box" 
          android:layout_width="wrap_content" 
          android:layout_height="wrap_content" 
          android:layout_alignParentTop="true" 
          android:layout_centerHorizontal="true" 
          android:layout_marginTop="300dp" 
          android:text="@string/_00_40"
          android:padding="10dp"  
   		  android:textSize="50sp"  
    	  android:textStyle="bold"  
    	  android:textColor="#FFA500"  
          android:textAppearance="?android:attr/textAppearanceLarge"/>

      <Button
          android:id="@+id/startbutton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignParentRight="true"
          android:layout_below="@+id/time_display_box"
          android:layout_centerHorizontal="true"
          android:layout_marginLeft="20dp"
          android:layout_marginRight="20dp"
          android:layout_marginTop="32dp"
          android:textSize="25sp"  
    	  android:textStyle="bold"
    	  android:textColor="#FFFFFF" 
          android:background="@drawable/but"
          android:text="@string/start" />

       <Button
           android:id="@+id/button1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_alignParentRight="true"
           android:layout_centerHorizontal="true"
           android:layout_marginLeft="20dp"
           android:layout_marginRight="20dp"
           android:layout_marginTop="478dp"
           android:textSize="25sp"  
    	   android:textStyle="bold"
    	   android:textColor="#FFFFFF" 
           android:background="@drawable/but"
           android:text="@string/button6name" />
  
</RelativeLayout>